--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         function testRelatorio() {
-            fetch('https://exemploaularender2.onrender.com/hello/relatorio', {
+            fetch('http://localhost:8080/hello/relatorio', {
                 method: "GET",
                 headers: {
                     'Content-Type': 'application/json'
