--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             });
         }
 
-        // Teste automático ao carregar a página
+       /* // Teste automático ao carregar a página
         document.addEventListener('DOMContentLoaded', function() {
             testRelatorio();
-        });
+        });*/
     </script>
 
     <h1>Teste do Relatório de Alunos</h1>
